vpc.tf

# criando recuros - resource - "nome official" "Apelido"

resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"
  # habilita suporte a dns na VPC
  enable_dns_support = true
  # habilita suporte a hostnames no DNS da vpc
  enable_dns_hostnames = true

  tags = {

    Name = "cursodevops-vpc"

  }
}
